[gd_scene load_steps=18 format=3 uid="uid://bklpnggu2tj0c"]

[ext_resource type="Script" path="res://units/Unit.gd" id="1_co2hn"]
[ext_resource type="PackedScene" uid="uid://7ompo5s8qd6p" path="res://models/woodsman/woodsman.glb" id="2_72bjw"]
[ext_resource type="Script" path="res://units/components/BowAndDagger.gd" id="2_gqrex"]
[ext_resource type="Script" path="res://units/components/HealthComponent.gd" id="2_jhhwx"]
[ext_resource type="Script" path="res://units/components/VelocityComponent.gd" id="3_f0em5"]
[ext_resource type="PackedScene" uid="uid://banvid5xf5lst" path="res://units/weapons/bow.tscn" id="3_gj0lf"]
[ext_resource type="Script" path="res://units/components/HeightComponent.gd" id="3_n2gsh"]
[ext_resource type="PackedScene" uid="uid://bac8aofl217ri" path="res://units/components/damagelabel/damage_number_component.tscn" id="4_2r0ps"]
[ext_resource type="Script" path="res://units/components/WoodsmanBrain.gd" id="4_4mtgn"]
[ext_resource type="PackedScene" uid="uid://dp4vd8emk3wx7" path="res://units/weapons/dagger.tscn" id="4_p6ex6"]
[ext_resource type="Script" path="res://units/components/RotationComponent.gd" id="5_p0h6f"]
[ext_resource type="PackedScene" uid="uid://cp2wfftw1nmvr" path="res://units/components/rank_component.tscn" id="6_5hx1j"]
[ext_resource type="Script" path="res://units/components/HitblinkComponent.gd" id="6_fqxow"]
[ext_resource type="PackedScene" uid="uid://bfg28nholuf7e" path="res://units/components/healthbar_component.tscn" id="11_ahflw"]
[ext_resource type="Script" path="res://units/components/ArmorComponent.gd" id="15_2olfq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mwxnr"]

[sub_resource type="SphereShape3D" id="SphereShape3D_jaud8"]
radius = 8.0

[node name="Woodsman" type="CharacterBody3D" groups=["Woodsman"]]
collision_mask = 3
axis_lock_linear_y = true
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource("1_co2hn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_mwxnr")

[node name="woodsman" parent="." instance=ExtResource("2_72bjw")]
transform = Transform3D(-2.30258e-08, 0, 0.526768, 0, 0.526768, 0, -0.526768, 0, -2.30258e-08, 0, 0, 0)
script = ExtResource("3_n2gsh")

[node name="HealthbarComponent" parent="woodsman/woodsman2" index="0" instance=ExtResource("11_ahflw")]
transform = Transform3D(-8.29805e-08, 0, -1.89837, 0, 1.89837, 0, 1.89837, 0, -8.29805e-08, 0, 4.55067, 0)

[node name="RankComponent" parent="woodsman/woodsman2" index="1" instance=ExtResource("6_5hx1j")]
transform = Transform3D(-1.31134e-08, -0.3, -1.31134e-08, 0, -1.31134e-08, 0.3, -0.3, 1.31134e-08, 5.73206e-16, -0.924923, 2.05941, 3.78328e-08)

[node name="rank_star" parent="woodsman/woodsman2/RankComponent" index="0"]
transform = Transform3D(0.707107, 0.612372, -0.353553, -0.707107, 0.612372, -0.353553, -2.84217e-14, 0.5, 0.866025, 1.64645, -2.90747, 0.866027)

[node name="rank_star2" parent="woodsman/woodsman2/RankComponent" index="1"]
transform = Transform3D(0.707107, 0.612372, -0.353553, -0.707107, 0.612372, -0.353553, -4.13694e-14, 0.5, 0.866025, 1, -1.55392, 0)

[node name="rank_star3" parent="woodsman/woodsman2/RankComponent" index="2"]
transform = Transform3D(0.707107, -0.612372, 0.353553, 0.707107, 0.612372, -0.353553, -2.96848e-14, 0.5, 0.866025, -1, -1.55392, 2.86102e-06)

[node name="rank_star4" parent="woodsman/woodsman2/RankComponent" index="3"]
transform = Transform3D(0.707107, -0.612372, 0.353553, 0.707107, 0.612372, -0.353553, -5.32907e-14, 0.5, 0.866025, -1.64645, -2.90747, 0.866025)

[node name="DamageNumberComponent" parent="woodsman" instance=ExtResource("4_2r0ps")]
is_ally = true

[node name="BowAndDagger" type="Node3D" parent="woodsman" node_paths=PackedStringArray("bow", "daggers")]
script = ExtResource("2_gqrex")
bow = NodePath("Bow")
daggers = [NodePath("Dagger"), NodePath("Dagger2")]

[node name="Bow" parent="woodsman/BowAndDagger" instance=ExtResource("3_gj0lf")]
transform = Transform3D(1, 0, 3.55271e-15, 0, 1, 0, -3.55271e-15, 0, 1, 0, 0, 0)

[node name="Dagger" parent="woodsman/BowAndDagger" instance=ExtResource("4_p6ex6")]

[node name="Dagger2" parent="woodsman/BowAndDagger" instance=ExtResource("4_p6ex6")]
transform = Transform3D(1, 0, -3.55271e-15, 0, 1, 0, -3.55271e-15, 0, -1, 0, 0, 0)
visible = false
animation_delay = 0.1
disabled = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = 0.5
navigation_layers = 3
avoidance_enabled = true
radius = 2.0

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_jhhwx")
max_health = 80.0

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("3_f0em5")
max_speed = 7.0
acceleration = 3.0

[node name="WoodsmanBrain" type="Node" parent="." node_paths=PackedStringArray("unit", "melee_weapon", "ranged_weapon")]
script = ExtResource("4_4mtgn")
unit = NodePath("..")
melee_weapon = NodePath("../woodsman/BowAndDagger/Dagger")
ranged_weapon = NodePath("../woodsman/BowAndDagger/Bow")
max_nearby_melee_threshold = 5

[node name="RotationComponent" type="Node" parent="."]
script = ExtResource("5_p0h6f")

[node name="HitblinkComponent" type="Node" parent="." node_paths=PackedStringArray("model")]
script = ExtResource("6_fqxow")
model = NodePath("../woodsman/woodsman2")

[node name="ArmorComponent" type="Node" parent="."]
script = ExtResource("15_2olfq")

[node name="FleeRange" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="FleeRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_jaud8")

[connection signal="on_recieved_hit" from="." to="woodsman/DamageNumberComponent" method="_on_damage_recieved"]
[connection signal="on_recieved_hit" from="." to="HealthComponent" method="_on_recieved_hit"]
[connection signal="on_recieved_hit" from="." to="VelocityComponent" method="_on_recieved_hit"]
[connection signal="on_recieved_hit" from="." to="HitblinkComponent" method="_on_recieved_hit"]
[connection signal="on_get_kill" from="woodsman/BowAndDagger/Bow" to="woodsman/woodsman2/RankComponent" method="_on_get_kill"]
[connection signal="on_get_kill" from="woodsman/BowAndDagger/Dagger" to="woodsman/woodsman2/RankComponent" method="_on_get_kill"]
[connection signal="on_get_kill" from="woodsman/BowAndDagger/Dagger2" to="woodsman/woodsman2/RankComponent" method="_on_get_kill"]
[connection signal="died" from="HealthComponent" to="." method="_on_died"]
[connection signal="health_changed" from="HealthComponent" to="woodsman/woodsman2/HealthbarComponent" method="_on_health_component_health_changed"]
[connection signal="enter_combat" from="WoodsmanBrain" to="woodsman/BowAndDagger" method="_on_enter_combat"]
[connection signal="exit_combat" from="WoodsmanBrain" to="woodsman/BowAndDagger" method="_on_exit_combat"]
[connection signal="on_lock_target" from="WoodsmanBrain" to="RotationComponent" method="_on_lock_target"]
[connection signal="request_attack" from="WoodsmanBrain" to="woodsman/BowAndDagger" method="_on_request_attack"]
[connection signal="switch_melee" from="WoodsmanBrain" to="woodsman/BowAndDagger" method="_on_switch_melee"]
[connection signal="body_entered" from="FleeRange" to="WoodsmanBrain" method="_on_body_entered_nearby_range"]
[connection signal="body_exited" from="FleeRange" to="WoodsmanBrain" method="_on_body_exited_nearby_range"]

[editable path="woodsman"]
[editable path="woodsman/woodsman2/RankComponent"]
[editable path="woodsman/woodsman2/RankComponent/rank_star"]
[editable path="woodsman/woodsman2/RankComponent/rank_star2"]
[editable path="woodsman/woodsman2/RankComponent/rank_star3"]
[editable path="woodsman/woodsman2/RankComponent/rank_star4"]
